--- a/nginx-alpine-ssl/config/default.conf
+++ b/nginx-alpine-ssl/config/default.conf
@@ -8,10 +8,13 @@ server {
 	listen [::]:443 ssl http2 default_server;
 	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
 	ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-
+	gzip on;
+	gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
 	# Everything is a 404
 	location / {
 		root /var/www/localhost/htdocs;
+		http2_push /assets/demo-web/img/logo-demo-web.png;
+		http2_push /styles/page.css;
 		#return 404;
 	}
 
