demo web: added icons nad wallpaper image

--- a/nginx-alpine-ssl/config/default.conf
+++ b/nginx-alpine-ssl/config/default.conf
@@ -14,6 +14,7 @@ server {
 	location / {
 		root /var/www/localhost/htdocs;
 		http2_push /assets/demo-web/img/logo-demo-web.png;
+		http2_push /assets/demo-web/img/4kWallpaperSmokePro.png;
 		http2_push /styles/page.css;
 		#return 404;
 	}
