--- a/nginx-alpine-ssl/config/default.conf
+++ b/nginx-alpine-ssl/config/default.conf
@@ -13,8 +13,8 @@ server {
 	# Everything is a 404
 	location / {
 		root /var/www/localhost/htdocs;
-		http2_push /assets/demo-web/img/logo-demo-web.png;
-		http2_push /assets/demo-web/img/4kWallpaperSmokePro.png;
+		http2_push /assets/img/logo-battle.png.png;
+		http2_push /assets/img/4kWallpaperSmokePro.png;
 		http2_push /styles/page.css;
 		#return 404;
 	}
