--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.1.8"
-  }
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "battle-page",
+  "description": "is training application for performance and web performance testing",
+  "version": "1.0.0",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/canarytrace/battle-page.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/canarytrace/battle-page/issues"
+  },
+  "homepage": "https://github.com/canarytrace/battle-page#readme"
 }
