--- a/nginx-alpine-ssl/config/default.conf
+++ b/nginx-alpine-ssl/config/default.conf
@@ -13,9 +13,7 @@ server {
 	# Everything is a 404
 	location / {
 		root /var/www/localhost/htdocs;
-		http2_push /assets/img/logo-battle.png.png;
-		http2_push /assets/img/4kWallpaperSmokePro.png;
-		http2_push /styles/page.css;
+		http2_push /src/other/Waves_Dark_Alt_6016x6016.jpg;
 		#return 404;
 	}
 
