--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "3.1.8"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "forever": "4.0.3"
   },
   "scripts": {
     "start": "node server.js"
